# piano-ml

./: .gitattributes  .gitignore  LICENSE  MODEL_CARD.md  Makefile  README.md  packages.txt  pyproject.toml  requirements.txt
configs/: 38m.json  big.json  config.json  large.json
huggingface/: README.md
huggingface/space/: README.md  app.py  requirements.txt
huggingface/space/configs/: config.json
huggingface/space/models/remi-17m/: PUT_CHECKPOINT_HERE.txt
huggingface/space/models/remi-modern-2048-ft/: PUT_CHECKPOINT_HERE.txt
scripts/: midi_stats.py
src/: __init__.py  audio.py  cli.py  config.py  constants.py  dashboard.py  data.py  eval.py  export.py  generate.py  midi.py  model.py  onnx_runtime.py  optim.py  remi.py  remi_bpe.py  render.py  sample.py  train.py
